@@ -64,6 +64,10 @@
                    OFS.interfaces.IObjectWillBeRemovedEvent"
               handler=".events.onGroupWillBeRemoved" />
 
+  <subscriber for=".interfaces.IMeetingConfig
+                   OFS.interfaces.IObjectWillBeRemovedEvent"
+              handler=".events.onConfigWillBeRemoved" />
+
   <subscriber for=".interfaces.IMeetingGroup
                    zope.container.interfaces.IObjectRemovedEvent"
               handler=".events.onGroupRemoved" />
